# deepagent_jp

./: .gitignore  deep.tcpcom.com.br.conf  deep.tcpcom.com.br.conf.old  docker-compose.yml
agents_and_backend/: .gitignore  README.md  langgraph.json  pyproject.toml  run.sh
agents_and_backend/src/agent/: planning_graph.py  research_graph.py  simpleagent_graph.py  webapp.py
agents_and_backend/src/agent/planning_agent/: __init__.py  prompts.py  tools.py
agents_and_backend/src/agent/prompts/: research_agent_system_prompt.md
agents_and_backend/src/agent/research_agent/: __init__.py  prompts.py  tools.py
agents_and_backend/src/agent/tools/: __init__.py  jp_bdc_tools.py
backend/: Dockerfile  langgraph.json  pyproject.toml  run.sh
backend/agents/: planning_graph.py  research_graph.py  simpleagent_graph.py
backend/agents/prompts/: planning_agent_system_prompt.md  research_agent_researcher_instructions.md  research_agent_system_prompt.md
backend/agents/skills/ardic-gin-expert/: SKILL.md
backend/agents/skills/ardic-gin-expert/references/: example_reference.md  knowledge_base.md  planning_request.md
backend/agents/skills/fasapi-documents-manager/: SKILL.md
backend/agents/skills/fasapi-projects-lister/: SKILL.md
backend/agents/skills/fasapi-tasks-manager/: SKILL.md
backend/agents/skills/sprint-planner/: SKILL.md
backend/agents/tools/: save_markdown_report.py
backend/api/: main.py  models.py  requirements.txt  storage.py
backend/api/routes/: __init__.py  assistants.py  auth.py  runs.py  threads.py
backend/migrations/: add_threads_compat_columns.sql  grant_ownership_to_agent_user.sql
backend_fastapi/: README.md  main.py  models.py  requirements.txt  run.sh  storage.py
backend_fastapi/graphs/: __init__.py
frontend/: .env.production  Dockerfile  fluxo.md  package-lock.json  package.json
(+143 files in other folders)
